# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/

[build-system]
# PEP 518 https://www.python.org/dev/peps/pep-0518/
# https://discuss.python.org/t/help-testing-experimental-features-in-setuptools/13821
requires = [
  "setuptools>=65",
  "wheel",               # for bdist package distribution
  "setuptools_scm>=7.1", # for automated versioning
]

# PEP 517 https://peps.python.org/pep-0517/
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools_scm]
write_to = "src/raccoonsql/_version.py"

# PEP 621 https://peps.python.org/pep-0621/
[project]
name = "raccoonsql"
# version = "0.0.0"
# for automated versioning by pypa/setuptools_scm. see https://peps.python.org/pep-0621/#dynamic
dynamic = ["version"]
description = "a tiny package example w/setuptools"
authors = [{ name = "jtkwon" }, { email = "taerakwon@gmail.com" }]
maintainers = [{ name = "jtkwon" }, { email = "taerakwon@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]
keywords = ["raccoon", "setuptools"]
dependencies = ["requests"]
[project.optional-dependencies]
dev = ["pytest==7.3.0", "pytest-cov[all]", "mypy==0.910", "black==21.10b0"]
[project.urls]
Homepage = "https://github.com/jtkwon/raccoonsql"
documentation = "https://github.com/jtkwon/raccoonsql"
repository = "https://github.com/jtkwon/raccoonsql"
changelog = "https://github.com/jtkwon/raccoonsql/blob/main/CHANGELOG.md"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.poetry]
name = "raccoonsql"
version = "0.0.0"
description = "RaccoonSQL written in Python"
authors = ["Jeff Kwon <taerakwon@gmail.com>"]